# tesla-wallcon-monitor

./: CLAUDE.md  Cargo.toml  README.md
.claude/: 0e595636-7138-43df-9463-6393273da2ee.jsonl  27453c57-add8-4247-bce8-45b94a88b3ec.jsonl  4281f4ce-2725-41ea-9fac-806a47050023.jsonl  5cfaaf8d-f182-407d-aa37-def3a350608e.jsonl  agent-520e432b.jsonl  agent-a032ae3.jsonl  agent-a5042e7.jsonl  agent-a62323b.jsonl  agent-a8c0eb6.jsonl  agent-adfc53d.jsonl  agent-ae391ca4.jsonl  agent-af6bf24.jsonl  b7f6a25f-a599-4104-8931-dfb06ba073b6.jsonl  f05cbdf4-f22a-4ba1-abcf-519e9a95f7da.jsonl
.claude/b7f6a25f-a599-4104-8931-dfb06ba073b6/subagents/: agent-a3ec80b.jsonl  agent-a86e663.jsonl  agent-ad050b5.jsonl
data/: logs.txt  logs10tt-d-2.txt  logs2.txt  logs3-d-2.txt  logs4-d-2.txt  logs5-d-2.txt  logs5tt-d-2.txt  logs6-d-2.txt  logs7-d-2.after-tesla-app-pw-change.wc-power-cycle.txt  logs8-d-2.after-factory-reset.txt
src/: main.rs
