[package]
name = "tesla-wallcon-monitor"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
crossterm = "0.28"
log = "0.4"
simplelog = "0.12"
